✨ 支出に紐づいているカテゴリも削除できないよう修正
